modifying the first test

--- a/public/streamtest1.html
+++ b/public/streamtest1.html
@@ -1,8 +1,22 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="UTF-8">
-		<style>
+<html id="Stencil" lang="en-US" class="my1columns  ua-wk ua-mac ua-wk537  l-out Pos-r https fp smartphone Device bkt999" style="background-color:#ffffff;">
+    <head>
+        <title>Yahoo</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+        <link rel="apple-touch-icon" sizes="" href="" />
+        <meta http-equiv="X-UA-Compatible" content="chrome=1">
+        <meta name="description" content="A new welcome to Yahoo. The new Yahoo experience makes it easier to discover the news and information that you care about most. It's the web ordered for you.">
+        <meta name="keywords" content="yahoo, yahoo home page, yahoo homepage, yahoo search, yahoo mail, yahoo messenger, yahoo games, news, finance, sport, entertainment">
+        <meta property="og:title" content="Yahoo" />
+        <meta property="og:type" content='website' />
+        <meta property="og:url" content="https://www.yahoo.com" />
+        <meta property="og:description" content="A new welcome to Yahoo. The new Yahoo experience makes it easier to discover the news and information that you care about most. It's the web ordered for you."/>
+        <meta property="og:image" content="https://s3.yimg.com/dh/ap/default/130909/y_200_a.png"/>
+        <meta property="og:site_name" content="Yahoo" />
+        <meta property="fb:app_id" content="90376669494" />
+        <meta name="format-detection" content="telephone=no" />
+    	<style>
         head,script,link,style {
             display:none;
             visibility:hidden;
@@ -11,11 +25,8 @@
             height: 0px;
             width: 0px;
         }
-    </style>
-    <link href="https://s.yimg.com/os/mit/td/stencil-0.1.224/stencil-css-s/stencil-css-s-min.css" rel="stylesheet" type="text/css">
-		<title>
-			Stream
-		</title>
+        </style>
+        <link href="https://s.yimg.com/os/mit/td/stencil-0.1.224/stencil-css-s/stencil-css-s-min.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 
