--- a/public/streamtest6-2.html
+++ b/public/streamtest6-2.html
@@ -952,7 +952,7 @@ function loadXMLDoc() {
     xmlhttp.open("GET","streamdatamin.json",true);
     xmlhttp.send();
 }
-setTimeout(loadXMLDoc, 250);
+setTimeout(loadXMLDoc, 250); //http://www.webpagetest.org/result/140204_29_c54249bc9f505710aa1e78bcba78cd3c/1/details/
 
 </script>
 
