--- a/public/streamtest2-2.html
+++ b/public/streamtest2-2.html
@@ -966,8 +966,8 @@ function loadXMLDoc() {
     xmlhttp.open("GET","streamdatamin.json",true);
     xmlhttp.send();
 }
-loadXMLDoc();
-//setTimeout(loadXMLDoc, 250);
+//loadXMLDoc();
+setTimeout(loadXMLDoc, 250);
 </script>
 
 
