adding 2-1-1 test fixing double new bug

--- a/public/streamtest2-1-1.html
+++ b/public/streamtest2-1-1.html
@@ -16,7 +16,7 @@
         <meta property="og:site_name" content="Yahoo" />
         <meta property="fb:app_id" content="90376669494" />
         <meta name="format-detection" content="telephone=no" />
-        <script>var t0 = new new Date().getTime();</script>
+        <script>var t0 = new Date().getTime();</script>
     	<style>
 /*! used normalize.css as a starting point
  * normalize.css v1.0.1 | MIT License | git.io/normalize
@@ -939,7 +939,6 @@
             </div>
         </div>
     </div>
-
     
 
     
@@ -956,7 +955,7 @@
 
 <script>
 var img = new Inage(),
-    t1 = new new Date().getTime(),
+    t1 = new Date().getTime(),
     delta = t1 - t0;
 img.src="https://s.yimg.com/os/mit/ape/m/81f43c2/t.gif?delta"+delta;
 </script>
