adding 2-1-1 test fixing image bug

--- a/public/streamtest2-1-1.html
+++ b/public/streamtest2-1-1.html
@@ -954,7 +954,7 @@
             </div>
 
 <script>
-var img = new Inage(),
+var img = new Image(),
     t1 = new Date().getTime(),
     delta = t1 - t0;
 img.src="https://s.yimg.com/os/mit/ape/m/81f43c2/t.gif?delta"+delta;
