--- a/public/streamtest2-1-1.html
+++ b/public/streamtest2-1-1.html
@@ -957,7 +957,8 @@
 var img = new Image(),
     t1 = new Date().getTime(),
     delta = t1 - t0;
-img.src="https://s.yimg.com/os/mit/ape/m/81f43c2/t.gif#delta:"+delta;
+
+    img.src="http://l.yimg.com/nn/lib/metro/p1.gif?delta="+delta;
 </script>
 
 
