adding data uri test

--- a/public/datauri_test3_2.html
+++ b/public/datauri_test3_2.html
@@ -12,13 +12,13 @@
         
     </head>
     <body style="background-color:#000000;">
-        <img src="http://t1.gstatic.com/images?q=tbn:ANd9GcR1o1dnsOIWDA5vITr1fuYsArHGfur-wvce0zJCTEYu8dcfv4lxaSnUwTuEKJOs8Z-eDy9Y4s0YXQ">
-        <img src="http://t3.gstatic.com/images?q=tbn:ANd9GcQZYOQSJzNc_t4bmLGQ7e1-s1fagMNHfNU0D8GFSzU9dqCaxnixzK6jSeiUoVkD8jwteCD1KBzdZA">
-        <img src="http://t1.gstatic.com/images?q=tbn:ANd9GcSvoxpD87esWf_3-bdx5iO7KN2pe4xOkdHDZ5yNUnx2quMWGZ3KwGiU-8w-SZ3UCPLoYj8iZdy90w">
-        <img src="http://t1.gstatic.com/images?q=tbn:ANd9GcSgWjHQLbHJnAG3rsFwTdKFwR2zckSmB4_9fF1zPJwut49VNtCPcC0U9n-Mco28-CxhoCvur2U4AhY">
-        <img src="http://t0.gstatic.com/images?q=tbn:ANd9GcRiSBY99JMhd3NS41BYQelynzEVaQWsL8aSd48QnL9ROmTBnreOqD7kqSqSCvuZBnYshythRMLR7Q">
-        <img src="http://t2.gstatic.com/images?q=tbn:ANd9GcTkdNunUKYgj0EPD2IUrUrdPErY9J8h5w_06aNIvpulpCRAuIxxIh5ks2oye9HvD8GxtffSgqI7VXY">
-        
+        <img src="https://t1.gstatic.com/images?q=tbn:ANd9GcR1o1dnsOIWDA5vITr1fuYsArHGfur-wvce0zJCTEYu8dcfv4lxaSnUwTuEKJOs8Z-eDy9Y4s0YXQ">
+        <img src="https://t3.gstatic.com/images?q=tbn:ANd9GcQZYOQSJzNc_t4bmLGQ7e1-s1fagMNHfNU0D8GFSzU9dqCaxnixzK6jSeiUoVkD8jwteCD1KBzdZA">
+        <img src="https://t1.gstatic.com/images?q=tbn:ANd9GcSvoxpD87esWf_3-bdx5iO7KN2pe4xOkdHDZ5yNUnx2quMWGZ3KwGiU-8w-SZ3UCPLoYj8iZdy90w">
+        <img src="https://t1.gstatic.com/images?q=tbn:ANd9GcSgWjHQLbHJnAG3rsFwTdKFwR2zckSmB4_9fF1zPJwut49VNtCPcC0U9n-Mco28-CxhoCvur2U4AhY">
+        <img src="https://t0.gstatic.com/images?q=tbn:ANd9GcRiSBY99JMhd3NS41BYQelynzEVaQWsL8aSd48QnL9ROmTBnreOqD7kqSqSCvuZBnYshythRMLR7Q">
+        <img src="https://t2.gstatic.com/images?q=tbn:ANd9GcTkdNunUKYgj0EPD2IUrUrdPErY9J8h5w_06aNIvpulpCRAuIxxIh5ks2oye9HvD8GxtffSgqI7VXY">
+
 
 
         <script>
