--- a/public/localcache-cache.html
+++ b/public/localcache-cache.html
@@ -953,7 +953,10 @@ var img = new Image(),
     t1 = new Date().getTime(),
     delta = t1 - t0;
 
-    img.src="http://l.yimg.com/nn/lib/metro/p1.gif?delta="+delta;
+    window.onload = function() {
+        img.src="https://s1.yimg.com/nn/lib/metro/p1.gif?delta="+delta;
+    };
+
 </script>
 
 
