modify yast exmple

--- a/public/example_aft_good.html
+++ b/public/example_aft_good.html
@@ -47,7 +47,7 @@
 
 	</div>
 	<iframe src="http://eachstorm.corp.yahoo.com:8080/test/delay.php?addlatency=3100000" width="1" height="1" style="visibility:hidden;"></iframe>
-	<script type="text/javascript" src="../src/yaft2.js"></script>
+	<script type="text/javascript" src="yaft2.js"></script>
 	<script>
 		var yaftConfig = {
 			modules: ['module'],
