adding delayed feature

--- a/public/example_aft_bad.html
+++ b/public/example_aft_bad.html
@@ -45,7 +45,7 @@
 			<div id="module_ad"></div>
 		</div>
 	</div>
-	<iframe src="http://eachstorm.corp.yahoo.com:8080/test/delay.php?addlatency=2100000" width="1" height="1" style="visibility:hidden;"></iframe>
+	<iframe src="fastsite.herokuapp.com/delay?addlatency=2000" width="1" height="1" style="visibility:hidden;"></iframe>
 	<script type="text/javascript" src="yaft2.js"></script>
 	<script>
 		var yaftConfig = {
