--- a/public/example_aft_good.html
+++ b/public/example_aft_good.html
@@ -46,7 +46,7 @@
 		</div>
 
 	</div>
-	<iframe src="fastsite.herokuapp.com/delay?addlatency=3100000" width="1" height="1" style="visibility:hidden;"></iframe>
+	<iframe src="http://fastsite.herokuapp.com/delay?addlatency=3000" width="1" height="1" style="visibility:hidden;"></iframe>
 	<script type="text/javascript" src="yaft2.js"></script>
 	<script>
 		var yaftConfig = {
