removing setTimeout hacks

--- a/public/example_aft_bad.html
+++ b/public/example_aft_bad.html
@@ -46,9 +46,7 @@
 			</div>
 		</div>
 		<div class="ad">
-			<div id="module_ad">
-				<img src="http://fastsite.herokuapp.com/delayasset/5000/ad.png" width="300" height="600">
-			</div>
+			<div id="module_ad"></div>
 		</div>
 	</div>
 	<iframe src="http://fastsite.herokuapp.com/delay?addlatency=2000" width="1" height="1" style="visibility:hidden;"></iframe>
