--- a/public/example_aft_bad.html
+++ b/public/example_aft_bad.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>YAFT example1</title>
+	<title>Defer loading a module after load time</title>
 	<style>
 		body, img, div {
 			margin: 0;
 			padding: 0;
 		}
-
+		.title {
+			text-align: center;
+		}
 		.main_wrapper {
 			margin: 0 auto;
 			width: 900px;
@@ -33,6 +35,9 @@
 </head>
 <body>
 	<div class="main_wrapper">
+		<div class="title">
+			Defer loading a module [AD] in above the fold
+		</div>
 		<div class="head">
 			<div id="module_head">
 				<img src="http://fastsite.herokuapp.com/delayasset/1000/header.png" width="900" height="100">
