arranging yaft js

--- a/public/example_aft_bad.html
+++ b/public/example_aft_bad.html
@@ -53,7 +53,7 @@
 		</div>
 	</div>
 	<iframe src="http://fastsite.herokuapp.com/delay?addlatency=2000" width="1" height="1" style="visibility:hidden;"></iframe>
-	<script type="text/javascript" src="yaft2.js"></script>
+	<script type="text/javascript" src="../src/yaft2.js"></script>
 	<script>
 		var yaftConfig = {
 			modules: ['module'],
