fixing all ie issues and adding clone object

--- a/public/example_aft_good.html
+++ b/public/example_aft_good.html
@@ -55,7 +55,7 @@
 		</div>
 
 	</div>
-	<script type="text/javascript" src="../src/yaft2.js"></script>
+	<script type="text/javascript" src="yaft2.js"></script>
 	<script>
 		var yaftConfig = {
 			modules: ['module'],
