--- a/public/example_aft_good.html
+++ b/public/example_aft_good.html
@@ -56,10 +56,12 @@
 
 	</div>
 	<script type="text/javascript" src="yaft2.js"></script>
+	<script type="text/javascript" src="yaft2-report.js"></script>
 	<script>
 		var yaftConfig = {
 			modules: ['module'],
 			maxWaitTime: 1000,
+			canShowVisualReport: true,
 			useNormalizeCoverage: true
 		};
 		YAFT.init(yaftConfig, function(data,error) {
