--- a/public/example_aft_bad.html
+++ b/public/example_aft_bad.html
@@ -52,7 +52,8 @@
 			<div id="module_ad"></div>
 		</div>
 	</div>
-	<iframe src="http://fastsite.herokuapp.com/delay?addlatency=2000" width="1" height="1" style="visibility:hidden;"></iframe>
+	<iframe src="http://fastsite.herokuapp.com/delay2?addlatency=1000" width="1" height="1" style="visibility:hidden;">
+	</iframe>
 	<script type="text/javascript" src="yaft2.js"></script>
 	<script type="text/javascript" src="yaft2-report.js"></script>
 	<script>
