Making har generation configurable

--- a/public/example_aft_iframe_test.html
+++ b/public/example_aft_iframe_test.html
@@ -59,6 +59,7 @@
 		var yaftConfig = {
 			modules: ['module'],
 			maxWaitTime: 6000,
+			generateHAR: true,
 			canShowVisualReport: true,
 			useNormalizeCoverage: true
 		};
