--- a/public/ssl_primer.html
+++ b/public/ssl_primer.html
@@ -26,14 +26,20 @@
 	</div>
 	<script>
 		window.addEventListener('load', function() {
-			var img = new Image();
-				img2 = new Image();
-			img.src = "https://s.yimg.com/rz/l/favicon.ico";
-			img2.src = "https://s1.yimg.com/rz/l/favicon.ico";
-
+			function primeDNS(i, j) {
+                var img = new Image();
+                img.src = 'https://s'+(i||'')+'.yimg.com/nn/lib/metro/p'+j+'.gif';
+            }
+            primeDNS(0,1);
+            primeDNS(0,2);
+            primeDNS(0,3);
+            primeDNS(1,1);
+            primeDNS(1,2);
+            primeDNS(1,3);
+            
 			setTimeout(function(){
 				window.location = 'https://www.yahoo.com';
-			},2000);
+			},5000);
 		}, false);
 	</script>
 </body>
