--- a/public/ssl_primer.html
+++ b/public/ssl_primer.html
@@ -36,6 +36,9 @@
             primeDNS(1,1);
             primeDNS(1,2);
             primeDNS(1,3);
+            primeDNS(2,1);
+            primeDNS(2,2);
+            primeDNS(2,3);
             
 			setTimeout(function(){
 				window.location = 'https://www.yahoo.com';
