--- a/public/ssl_primer.html
+++ b/public/ssl_primer.html
@@ -26,19 +26,18 @@
 	</div>
 	<script>
 		window.addEventListener('load', function() {
-			function primeDNS(i, j) {
+			var k, l, domain = 3, conn = 5;
+
+			function primeDnsSslConn(i, j) {
                 var img = new Image();
                 img.src = 'https://s'+(i||'')+'.yimg.com/nn/lib/metro/p'+j+'.gif';
             }
-            primeDNS(0,1);
-            primeDNS(0,2);
-            primeDNS(0,3);
-            primeDNS(1,1);
-            primeDNS(1,2);
-            primeDNS(1,3);
-            primeDNS(2,1);
-            primeDNS(2,2);
-            primeDNS(2,3);
+
+            for (k = 0; k < domain; k += 1) {
+	            for (l = 1; l <= conn; l += 1) {
+	            	primeDnsSslConn(k,l);
+	            }
+            }
             
 			setTimeout(function(){
 				window.location = 'https://www.yahoo.com';
