ssl primer test

--- a/public/ssl_primer.html
+++ b/public/ssl_primer.html
@@ -26,12 +26,14 @@
 	</div>
 	<script>
 		window.addEventListener('load', function() {
-			var k, l, domain = 3, conn = 5;
+			var k, l, domain = 3, conn = 5, imgMain = new Image();
 
 			function primeDnsSslConn(i, j) {
                 var img = new Image();
                 img.src = 'https://s'+(i||'')+'.yimg.com/nn/lib/metro/p'+j+'.gif';
             }
+            
+            img.src = 'https://www.yahoo.com/favicon.ico';
 
             for (k = 0; k < domain; k += 1) {
 	            for (l = 1; l <= conn; l += 1) {
