ssl primer test fix

--- a/public/ssl_primer.html
+++ b/public/ssl_primer.html
@@ -33,7 +33,7 @@
                 img.src = 'https://s'+(i||'')+'.yimg.com/nn/lib/metro/p'+j+'.gif';
             }
             
-            img.src = 'https://www.yahoo.com/favicon.ico';
+            imgMain.src = 'https://www.yahoo.com/favicon.ico';
 
             for (k = 0; k < domain; k += 1) {
 	            for (l = 1; l <= conn; l += 1) {
