--- a/public/ssl_primer.html
+++ b/public/ssl_primer.html
@@ -20,7 +20,7 @@
 <body>
 	<div class="main_wrapper">
 		<div class="title">
-			Test ssl prime <br/>
+			This test page shows how ssl, dns and connection priming happens from different page. <br/>
 			Go to <a href="https://www.yahoo.com">Yahoo</a>
 		</div>
 	</div>
@@ -32,7 +32,7 @@
                 var img = new Image();
                 img.src = 'https://s'+(i||'')+'.yimg.com/nn/lib/metro/p'+j+'.gif';
             }
-            
+            //destination
             imgMain.src = 'https://www.yahoo.com/favicon.ico';
 
             for (k = 0; k < domain; k += 1) {
@@ -40,10 +40,10 @@
 	            	primeDnsSslConn(k,l);
 	            }
             }
-            
+
 			setTimeout(function(){
 				window.location = 'https://www.yahoo.com';
-			},2000);
+			},5000);
 		}, false);
 	</script>
 </body>
