--- a/public/mail_login.html
+++ b/public/mail_login.html
@@ -43,7 +43,7 @@
             }
 			*/
 			setTimeout(function(){
-				window.location = 'mail_main.html?rand='+Math.floor((Math.random() * 100000) + 1);
+				window.location = 'mail_main.html?.rand='+Math.floor((Math.random() * 100000) + 1);
 			},2000);
 		}, false);
 	</script>
