--- a/public/example_aft_iframe_test.html
+++ b/public/example_aft_iframe_test.html
@@ -40,19 +40,19 @@
 		</div>
 		<div class="head">
 			<div id="module_head">
-				<img src="http://fastsite.herokuapp.com/delayasset/1000/header.png" width="900" height="100">
+				<img src="//fastsite.herokuapp.com/delayasset/1000/header.png" width="900" height="100">
 			</div>
 		</div>
 		<div class="main">
 			<div id="module_main">
-				<img src="http://fastsite.herokuapp.com/delayasset/2000/main.png" width="600" height="600">
+				<img src="//fastsite.herokuapp.com/delayasset/2000/main.png" width="600" height="600">
 			</div>
 		</div>
 		<div class="ad">
 			<div id="module_ad"></div>
 		</div>
 	</div>
-	<iframe id="myiframe" src="http://fastsite.herokuapp.com/delay2?addlatency=3000" width="300" height="250"></iframe>
+	<iframe id="myiframe" src="//fastsite.herokuapp.com/delay2?addlatency=3000" width="300" height="250"></iframe>
 	<script type="text/javascript" src="yaft2.js"></script>
 	<script type="text/javascript" src="yaft2-report.js"></script>
 	<script>
@@ -69,7 +69,7 @@
 			}
 		});
 		window.addEventListener('load', function() {
-			document.getElementById('module_ad').innerHTML =  '<img src="http://fastsite.herokuapp.com/delayasset/3000/ad.png"  width="300" height="600">';
+			document.getElementById('module_ad').innerHTML =  '<img src="//fastsite.herokuapp.com/delayasset/3000/ad.png"  width="300" height="600">';
 		}, false);
 
 	</script>
