adding hl vs gs comp and vid

--- a/public/HLvsGSRedirect/gsmobile.html
+++ b/public/HLvsGSRedirect/gsmobile.html
@@ -1247,7 +1247,7 @@ YMedia.use("media-rmp","media-i13n","media-dwell-time","node","event","json-stri
                                 DARLA.prefetched("fc");
 
                                 /* rendering prefetched Ad */
-                                DARLA.render();
+                                //DARLA.render();
                             }
                         }
                     };
