--- a/public/HLvsGSRedirect/gsmobile.html
+++ b/public/HLvsGSRedirect/gsmobile.html
@@ -1238,13 +1238,13 @@ YMedia.use("media-rmp","media-i13n","media-dwell-time","node","event","json-stri
                                 }
 
                                 /* prepare node is mainly for injected ad, eg. LREC within story body */
-                                DARLA_CONFIG.nodeMgr._prepareNodes();
+                                //DARLA_CONFIG.nodeMgr._prepareNodes();
 
                                 /* setting DARLA configuration */
-                                DARLA.config(DARLA_CONFIG);
+                                //DARLA.config(DARLA_CONFIG);
 
                                 /* prefetch Ads if applicable */
-                                DARLA.prefetched("fc");
+                                //DARLA.prefetched("fc");
 
                                 /* rendering prefetched Ad */
                                 //DARLA.render();
@@ -1255,7 +1255,7 @@ YMedia.use("media-rmp","media-i13n","media-dwell-time","node","event","json-stri
                 })(); /* End of YUI.AdsDarla */
 
                     YUI.AdsDarla.darla = { fetch: (Y.bind(YUI.AdsDarla.event, YUI.AdsDarla, 'darla')) };                YUI.AdsDarla.fetch = YUI.AdsDarla.darla.fetch;
-                Y.Global.fire('darla:ready'); 
+                //Y.Global.fire('darla:ready'); 
              }); /* End of YMedia */        }); /* End of YMedia.later */var ___adLT___ = [];
 function onDarlaFinishPosRender(position) {
   if (window.performance !== undefined && window.performance.now !== undefined) {
