--- a/public/example_aft_two.html
+++ b/public/example_aft_two.html
@@ -59,8 +59,8 @@
 		</div>
 
 	</div>
-	<script type="text/javascript" src="../src/yaft2-report.js"></script>
-	<script type="text/javascript" src="../src/yaft2.js"></script>
+	<script type="text/javascript" src="yaft2-report.js"></script>
+	<script type="text/javascript" src="yaft2.js"></script>
 	
 	<script>
 
