Adding delayed html

--- a/public/preconnecttest.html
+++ b/public/preconnecttest.html
@@ -3,8 +3,17 @@
 <head>
     <meta charset="utf-8"/>
     <link rel="dns-prefetch" href="//www.yahoo.com"/>
+    <link rel="preconnect" href="//www.yahoo.com"/>
     <link rel="dns-prefetch" href="//s.yimg.com"/>
+    <link rel="preconnect" href="//s.yimg.com"/>
     <link rel="dns-prefetch" href="//ws.progrss.yahoo.com"/>
+    <link rel="preconnect" href="//ws.progrss.yahoo.com"/>
+    <link rel="dns-prefetch" href="//geo.yahoo.com"/>
+    <link rel="preconnect" href="//geo.yahoo.com"/>
+    <link rel="dns-prefetch" href="//udc.yahoo.com"/>
+    <link rel="preconnect" href="//udc.yahoo.com"/>
+    <link rel="dns-prefetch" href="//fc.yahoo.com"/>
+    <link rel="preconnect" href="//fc.yahoo.com"/>
 
 	<title>Prime ssl tests</title>
 	<style>
