Test chrome chunk with jsonp

--- a/public/test_chrome_big_js.html
+++ b/public/test_chrome_big_js.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="https://d19rpgkrjeba2z.cloudfront.net/static/gen/12_92c304b748bcacd4425a.js"></script>
+<!-- <script src="https://d19rpgkrjeba2z.cloudfront.net/static/gen/12_92c304b748bcacd4425a.js"></script> -->
 </head>
 <body>
     FOOBAR
 </body>
+<script>
+    // start chunk loading
+    let s = document.createElement("script");
+    s.src = "https://d19rpgkrjeba2z.cloudfront.net/static/gen/12_92c304b748bcacd4425a.js";
+    document.body.appendChild(s);
+</script>
 </html>
