--- a/public/test_chrome_big_js.html
+++ b/public/test_chrome_big_js.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="js/test_tracking.js"></script>
+    <!-- <script src="js/test_tracking.js"></script> -->
+    <script src="https://d19rpgkrjeba2z.cloudfront.net/static/gen/runtime_9067d9778518bfe00f48.js" type="text/javascript"></script>
+    <script src="https://d19rpgkrjeba2z.cloudfront.net/static/gen/vendor_99ea9dca14cabfc45301.js" type="text/javascript"></script>
+    <script src="https://d19rpgkrjeba2z.cloudfront.net/static/gen/track_83db417dd54d478e3b4f.js" type="text/javascript"></script>
 </head>
 <body>
     FOOBAR
