--- a/public/test_chrome_big_js.html
+++ b/public/test_chrome_big_js.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <script>
+        var STATIC_CONTENT_HOST = 'https://d19rpgkrjeba2z.cloudfront.net';
+        var STATIC_URL_PREFIX = 'https://d19rpgkrjeba2z.cloudfront.net';
+        var STABLE_STATIC_URL_PREFIX = 'https://d19rpgkrjeba2z.cloudfront.net';
+        var WEBPACK_URL_PREFIX = 'https://d19rpgkrjeba2z.cloudfront.net/static/gen/';
+        var CSRFTOKEN = '8nbHqahTlIFimhAA5AMDP51ChXFgsVYqKhpQt53eJOGpBEpBAUBzdrYiDSo4NBjZ';
+    </script>
+
     <!-- <script src="js/test_tracking.js"></script> -->
     <script src="https://d19rpgkrjeba2z.cloudfront.net/static/gen/runtime_9067d9778518bfe00f48.js" type="text/javascript"></script>
     <script src="https://d19rpgkrjeba2z.cloudfront.net/static/gen/vendor_99ea9dca14cabfc45301.js" type="text/javascript"></script>
