Change end point

--- a/public/test_chrome_big_js.html
+++ b/public/test_chrome_big_js.html
@@ -19,7 +19,7 @@
 </body>
 <script>
     nd.flaskTrack.initialize(
-        'flask.us.nextdoor.com',
+        'flask.us.nextdoor-test.com', // environment url
         '2',
         'ND_TRACKING_TEST_BUILD', // you need to figure your web build version id
         'ND_TRACKING_TEST', // you need to figure out who is the user or dont set this
