--- a/public/test_chrome_big_js.html
+++ b/public/test_chrome_big_js.html
@@ -1,25 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script>
-        var STATIC_CONTENT_HOST = 'https://d19rpgkrjeba2z.cloudfront.net';
-        var STATIC_URL_PREFIX = 'https://d19rpgkrjeba2z.cloudfront.net';
-        var STABLE_STATIC_URL_PREFIX = 'https://d19rpgkrjeba2z.cloudfront.net';
-        var WEBPACK_URL_PREFIX = 'https://d19rpgkrjeba2z.cloudfront.net/static/gen/';
-        var CSRFTOKEN = '8nbHqahTlIFimhAA5AMDP51ChXFgsVYqKhpQt53eJOGpBEpBAUBzdrYiDSo4NBjZ';
-    </script>
-
-    <!-- <script src="js/test_tracking.js"></script> -->
-    <script src="https://d19rpgkrjeba2z.cloudfront.net/static/gen/runtime_9067d9778518bfe00f48.js" type="text/javascript"></script>
-    <script src="https://d19rpgkrjeba2z.cloudfront.net/static/gen/vendor_99ea9dca14cabfc45301.js" type="text/javascript"></script>
-    <script src="https://d19rpgkrjeba2z.cloudfront.net/static/gen/track_83db417dd54d478e3b4f.js" type="text/javascript"></script>
+    <script src="js/test_tracking.js"></script>
 </head>
 <body>
     FOOBAR
 </body>
 <script>
     nd.flaskTrack.initialize(
-        'flask.us.nextdoor-test.com', // environment url
+        'flask.us.nextdoor.com', // environment url
         '2',
         'ND_TRACKING_TEST_BUILD', // you need to figure your web build version id
         'ND_TRACKING_TEST', // you need to figure out who is the user or dont set this
